--- a/RemindMe/app/src/main/res/values/colors.xml
+++ b/RemindMe/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#008A9A</color>
     <color name="mainBackgrownd">#E2E2E2</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
