--- a/RemindMe/app/src/main/res/layout/activity_main.xml
+++ b/RemindMe/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@mipmap/ic_plus"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
+            app:backgroundTint="@color/colorPrimary"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
