--- a/RemindMe/app/src/main/res/values/colors.xml
+++ b/RemindMe/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="mainBackgrownd">#E2E2E2</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#191919</color>
 </resources>
